--- a/package.json
+++ b/package.json
@@ -22,55 +22,55 @@
   },
   "homepage": "https://github.com/bellentani/boot-gulp#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "autoprefixer": "^9.5.0",
-    "browser-sync": "^2.26.13",
-    "cssnano": "^4.1.10",
-    "del": "^4.0.0",
-    "gulp": "^4.0.0",
+    "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "autoprefixer": "^10.4.2",
+    "browser-sync": "^2.27.7",
+    "cssnano": "^5.0.16",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-concat": "^2.6.1",
-    "gulp-eslint": "^5.0.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-gzip": "^1.4.2",
     "gulp-html-beautify": "^1.0.1",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^6.0.0",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^8.0.0",
     "gulp-minify": "^3.1.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-stats": "0.0.4",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-stats": "1.0.2",
     "gulp-uglify": "^3.0.2",
-    "gulp-useref": "^3.1.6",
-    "lodash": ">=4.17.19",
+    "gulp-useref": "^5.0.0",
+    "lodash": ">=4.17.21",
     "node-dir": "^0.1.17",
     "run-sequence": "^2.2.1",
-    "webpack-stream": "^5.2.1"
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "axios": ">=0.18.1",
-    "body-parser": "^1.17.2",
-    "bootstrap": "^4.3.1",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "axios": ">=0.25.0",
+    "body-parser": "^1.19.1",
+    "bootstrap": "^5.1.3",
     "consign": "^0.1.6",
-    "core-js": "^2.4.1",
-    "dotenv": "^5.0.1",
-    "express": "^4.15.3",
-    "express-handlebars": "^3.0.0",
+    "core-js": "^3.21.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "express-handlebars": "^6.0.2",
     "express-myconnection": "^1.0.4",
-    "express-validator": "^6.8.0",
-    "font-awesome": "^4.7.0",
-    "google-auth-library": "^0.12.0",
-    "googleapis": "^39.1.0",
-    "handlebars": "^4.5.3",
-    "method-override": "^2.3.9",
+    "express-validator": "^6.14.0",
+    "google-auth-library": "^7.11.0",
+    "googleapis": "^95.0.0",
+    "handlebars": "^4.7.7",
+    "method-override": "^3.0.0",
     "natives": "^1.1.6",
-    "nodemailer": "^4.0.1",
+    "nodemailer": "^6.7.2",
     "request": "^2.83.0",
-    "rxjs": "^5.4.1",
-    "zone.js": "^0.8.14"
+    "rxjs": "^7.5.2",
+    "zone.js": "^0.11.4"
   }
 }
